force-app/main/default/objects/Quote/fields/Attention_to__c.field-meta.xml
<CustomField>
    <fullName>Attention_to__c</fullName>
    <formula>Opportunity.Attention_to__r.FirstName + &quot; &quot; + Opportunity.Attention_to__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attention to</label>
    <type>Text</type>
</CustomField>