force-app/main/default/objects/Quote/fields/Attention_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Attention_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This will show up on the generated quote PDF for the &quot;Proposal To&quot; section. Example: Proposal to Acme Corporation.</inlineHelpText>
    <label>Attention to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Attention to Account)</relationshipLabel>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>