force-app/main/default/objects/Quote/fields/Attention_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Attention_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attention to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Attention to Contact)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>