force-app/main/default/objects/Quote/fields/Attention_To_Person__c.field-meta.xml
<CustomField>
    <fullName>Attention_To_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attention to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Attention To Person)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>