force-app/main/default/objects/Quote/fields/Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Date__c</fullName>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>