force-app/main/default/objects/Quote/fields/Bidding_To__c.field-meta.xml
<CustomField>
    <fullName>Bidding_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name the person you are bidding this quote to. This persons name will show up on the generated quote in the &quot;Attention&quot; field at the top of the PDF.</inlineHelpText>
    <label>Bidding To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>