force-app/main/default/objects/Quote/fields/Bottom_Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bottom_Exception_Notes__c</fullName>
    <label>Closing Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>