force-app/main/default/objects/Quote/fields/CommisionCustomer__c.field-meta.xml
<CustomField>
    <fullName>CommisionCustomer__c</fullName>
    <label>Commision Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>