force-app/main/default/objects/Quote/fields/Commissions_and_Rebates__c.field-meta.xml
<CustomField>
    <fullName>Commissions_and_Rebates__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commissions and Rebates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>