force-app/main/default/objects/Quote/fields/Consulting_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consulting Engineer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>