force-app/main/default/objects/Quote/fields/Consulting_Engineer_Account__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Engineer_Account__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+  Opportunity.Consulting_Engineer_Contact_Person__r.Account.Id  ,Opportunity.Consulting_Engineer_Contact_Person__r.Account.Name ,&quot;__blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consulting Engineer (Account)</label>
    <type>Text</type>
</CustomField>