force-app/main/default/objects/Quote/fields/Current_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Lead_Time__c</fullName>
    <inlineHelpText>Select the lead time on the project. This will display on generated documents.</inlineHelpText>
    <label>Current Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Stock</fullName>
            </value>
            <value>
                <fullName>Less than 1 week</fullName>
            </value>
            <value>
                <fullName>1 - 2 weeks</fullName>
            </value>
            <value>
                <fullName>2 - 4 weeks</fullName>
            </value>
            <value>
                <fullName>4 - 6 weeks</fullName>
            </value>
            <value>
                <fullName>6 - 8 weeks</fullName>
            </value>
            <value>
                <fullName>8 - 10 weeks</fullName>
            </value>
            <value>
                <fullName>10 - 12 weeks</fullName>
            </value>
            <value>
                <fullName>12 - 14 weeks</fullName>
            </value>
            <value>
                <fullName>14 - 16 weeks</fullName>
            </value>
            <value>
                <fullName>16 - 18 weeks</fullName>
            </value>
            <value>
                <fullName>18 - 20 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>