force-app/main/default/objects/Quote/fields/Customer_P_O__c.field-meta.xml
<CustomField>
    <fullName>Customer_P_O__c</fullName>
    <label>Customer P.O.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>