force-app/main/default/objects/Quote/fields/GEN__c.field-meta.xml
<CustomField>
    <fullName>GEN__c</fullName>
    <label>GEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>