force-app/main/default/objects/Quote/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Contractor (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (General Contractor)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>