force-app/main/default/objects/Quote/fields/Generate_Quote_As_PDF__c.field-meta.xml
<CustomField>
    <fullName>Generate_Quote_As_PDF__c</fullName>
    <formula>IF(RecordTypeId == &apos;0124N000000SiFo&apos;,HYPERLINK(&quot;/apex/GeneratePdfOnQuote?id=&quot; &amp;Id + &apos;&amp;type=marrs&apos;, IMAGE(&quot;/resource/Button_Generate_Quote_PDF&quot;, &quot;Generate Quote As PDF&quot;),&quot;_self&quot;) ,HYPERLINK(&quot;/apex/GeneratePdfOnQuote?id=&quot; &amp;Id + &apos;&amp;type=quote&apos;, IMAGE(&quot;/resource/Button_Generate_Quote_PDF&quot;, &quot;Generate Quote As PDF&quot;),&quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Quote</label>
    <type>Text</type>
</CustomField>