force-app/main/default/objects/Quote/fields/Generate_Scope_Document__c.field-meta.xml
<CustomField>
    <fullName>Generate_Scope_Document__c</fullName>
    <formula>HYPERLINK(&quot;/apex/GeneratePdfOnQuote?id=&quot; &amp;Id + &apos;&amp;type=scope&apos;, IMAGE(&quot;/resource/Button_Generate_Scope&quot;, &quot;Generate Scope Document&quot;, 26, 120),&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Scope</label>
    <type>Text</type>
</CustomField>