force-app/main/default/objects/Quote/fields/Generate_Submittal_Document__c.field-meta.xml
<CustomField>
    <fullName>Generate_Submittal_Document__c</fullName>
    <formula>HYPERLINK(&quot;/apex/GenerateSubmittlaPDF?id=&quot; &amp;Id , IMAGE(&quot;/resource/Button_Generate_Submittal&quot;, &quot;Generate Submittal Document&quot;, 28, 150),&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Submittal Cover(s)</label>
    <type>Text</type>
</CustomField>