force-app/main/default/objects/Quote/fields/Hide_All_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Hide_All_Product_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide All Product Code</label>
    <type>Checkbox</type>
</CustomField>