force-app/main/default/objects/Quote/fields/Hide_All_Tags__c.field-meta.xml
<CustomField>
    <fullName>Hide_All_Tags__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide All Tags</label>
    <type>Checkbox</type>
</CustomField>