force-app/main/default/objects/Quote/fields/Hide_Price_Per__c.field-meta.xml
<CustomField>
    <fullName>Hide_Price_Per__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Price Per</label>
    <type>Checkbox</type>
</CustomField>