force-app/main/default/objects/Quote/fields/Hide_Total_Base_Bid_Total__c.field-meta.xml
<CustomField>
    <fullName>Hide_Total_Base_Bid_Total__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Total Base Bid Total</label>
    <type>Checkbox</type>
</CustomField>