force-app/main/default/objects/Quote/fields/Hide_Total_Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hide_Total_Extended_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Total Extended Cost</label>
    <type>Checkbox</type>
</CustomField>