force-app/main/default/objects/Quote/fields/Include_Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Include_Cover_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Cover Letter</label>
    <type>Checkbox</type>
</CustomField>