force-app/main/default/objects/Quote/fields/Is_Active_Project_Financials__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Project_Financials__c</fullName>
    <formula>IF(Id = Opportunity.Active_Financial_Quote__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active Project Financials</label>
    <type>Checkbox</type>
</CustomField>