force-app/main/default/objects/Quote/fields/Is_Sync_Quote__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync_Quote__c</fullName>
    <formula>IF(Opportunity.Sync_Quote__c ==  Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sync Quote</label>
    <type>Checkbox</type>
</CustomField>