force-app/main/default/objects/Quote/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Where will the equipment be shipped to?</inlineHelpText>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>