force-app/main/default/objects/Quote/fields/Opportunity_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account_Name__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Account Name</label>
    <type>Text</type>
</CustomField>