force-app/main/default/objects/Quote/fields/Opportunity_Estimated_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Estimated_Ship_Date__c</fullName>
    <formula>Opportunity.Ship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Estimated Ship Date</label>
    <type>Date</type>
</CustomField>