force-app/main/default/objects/Quote/fields/Opportunity_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Manufacturer__c</fullName>
    <formula>TEXT(Opportunity.Part_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Manufacturer</label>
    <type>Text</type>
</CustomField>