force-app/main/default/objects/Quote/fields/Opportunity_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Name__c</fullName>
    <formula>Opportunity.Owner.FirstName&amp;&quot;  &quot;&amp;Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Name</label>
    <type>Text</type>
</CustomField>