force-app/main/default/objects/Quote/fields/Opportunity_Owner_Office__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Office__c</fullName>
    <formula>TEXT(Opportunity.Owner.Office_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Office</label>
    <type>Text</type>
</CustomField>