force-app/main/default/objects/Quote/fields/Opportunity_StageName__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_StageName__c</fullName>
    <formula>TEXT(Opportunity.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity StageName</label>
    <type>Text</type>
</CustomField>