force-app/main/default/objects/Quote/fields/Opportunity_Sync_Quote__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sync_Quote__c</fullName>
    <formula>Opportunity.Sync_Quote__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Sync Quote</label>
    <type>Text</type>
</CustomField>