force-app/main/default/objects/Quote/fields/Original_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Name__c</fullName>
    <description>To hold original Quote Name</description>
    <inlineHelpText>This is the quote name that was used initially when the quote was created. This is the revision folder name in SharePoint.This is for reference purposes only.</inlineHelpText>
    <label>SharePoint Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>