force-app/main/default/objects/Quote/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <defaultValue>&apos;NET 30 days from date of shipment (subject to credit approval). Prices are firm for acceptance within 30 days. Except where banned by law, credit card orders will be subject to a 3% processing fee.&apos;</defaultValue>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>