force-app/main/default/objects/Quote/fields/Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Date__c</fullName>
    <inlineHelpText>This is the date the &quot;plans and drawings&quot; have from the client.</inlineHelpText>
    <label>Plan Date</label>
    <type>Date</type>
</CustomField>