force-app/main/default/objects/Quote/fields/prepared_by_user__c.field-meta.xml
<CustomField>
    <fullName>prepared_by_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prepared by user (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreateBy</relationshipName>
    <type>Lookup</type>
</CustomField>