force-app/main/default/objects/Quote/fields/Preview_Quote_Pdf__c.field-meta.xml
<CustomField>
    <fullName>Preview_Quote_Pdf__c</fullName>
    <formula>HYPERLINK(&quot;/apex/MarrsQuotePdf?id=&quot; &amp;Id, IMAGE(&quot;/resource/ButtonPreviewQuote&quot;, &quot;Preview Quote PDF&quot;),&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preview Quote Pdf</label>
    <type>Text</type>
</CustomField>