force-app/main/default/objects/Quote/fields/ProjectShipDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectShipDate__c</fullName>
    <formula>Opportunity.Project__r.ProjectShipDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Ship Date</label>
    <type>Date</type>
</CustomField>