force-app/main/default/objects/Quote/fields/Quantity_Total__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Total__c</fullName>
    <label>Quantity Total</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>