force-app/main/default/objects/Quote/fields/Quote_FileName__c.field-meta.xml
<CustomField>
    <fullName>Quote_FileName__c</fullName>
    <label>Current Quote FileName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>