force-app/main/default/objects/Quote/fields/QuoteDocumentVersion__c.field-meta.xml
<CustomField>
    <fullName>QuoteDocumentVersion__c</fullName>
    <description>Version of quote document as pdf</description>
    <label>Quote Document Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>