force-app/main/default/objects/Quote/fields/Scope_Bottom_Comments__c.field-meta.xml
<CustomField>
    <fullName>Scope_Bottom_Comments__c</fullName>
    <label>Scope Bottom Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>