force-app/main/default/objects/Quote/fields/Scope_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Scope_File_Name__c</fullName>
    <label>Current Scope FileName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>