force-app/main/default/objects/Quote/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <inlineHelpText>Type a cover letter if required.</inlineHelpText>
    <label>Cover Letter</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>