force-app/main/default/objects/Quote/fields/Scope_Top_Comments__c.field-meta.xml
<CustomField>
    <fullName>Scope_Top_Comments__c</fullName>
    <label>Scope Top Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>