force-app/main/default/objects/Quote/fields/ScopeDocumentVersion__c.field-meta.xml
<CustomField>
    <fullName>ScopeDocumentVersion__c</fullName>
    <description>Scope Document Latest Version Number</description>
    <label>Scope Document Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>