force-app/main/default/objects/Quote/fields/SharePoint_Folder__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder__c</fullName>
    <formula>HYPERLINK(&quot;/apex/SharePoint_Intermidiate?id=&quot; + Opportunity.Id , IMAGE(&quot;/resource/Button_Sharepoint_Folder&quot;, &quot;Open Sharepoint Folder&quot;, 30, 110),&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SharePoint Folder</label>
    <type>Text</type>
</CustomField>