force-app/main/default/objects/Quote/fields/Shipping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charges__c</fullName>
    <label>Shipping Charges</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freight to be added to invoice.</fullName>
                <label>FOB Factory; Freight to be added to invoice.</label>
            </value>
            <value>
                <fullName>Standard Freight Allowed.</fullName>
                <label>FOB Factory; Standard Freight Allowed.</label>
            </value>
            <value>
                <fullName>FOB Destination; Standard Freight Allowed.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>