force-app/main/default/objects/Quote/fields/Submittal_Closing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Submittal_Closing_Comments__c</fullName>
    <label>Submittal Closing Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>