force-app/main/default/objects/Quote/fields/Submittal_opening_comments__c.field-meta.xml
<CustomField>
    <fullName>Submittal_opening_comments__c</fullName>
    <label>Submittal Opening Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>