force-app/main/default/objects/Quote/fields/SubmittalDocumentVersion__c.field-meta.xml
<CustomField>
    <fullName>SubmittalDocumentVersion__c</fullName>
    <description>Submittal Document Latest Version</description>
    <label>Submittal Document Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>