force-app/main/default/objects/Quote/fields/This_data_is_submitted_for__c.field-meta.xml
<CustomField>
    <fullName>This_data_is_submitted_for__c</fullName>
    <label>This data is submitted for:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Record Purposes</fullName>
            </value>
            <value>
                <fullName>Re-Submittal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>