force-app/main/default/objects/Quote/fields/Top_Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Top_Exception_Notes__c</fullName>
    <label>Opening Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>