force-app/main/default/objects/Quote/fields/Total_Base_Bid_Total__c.field-meta.xml
<CustomField>
    <fullName>Total_Base_Bid_Total__c</fullName>
    <label>Total Base Bid Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>