force-app/main/default/objects/Quote/fields/Total_Buy_Resell_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Buy_Resell_Margin_Percentage__c</fullName>
    <label>Total Buy/Resell Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>