force-app/main/default/objects/Quote/fields/Total_Buy_Resell_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Buy_Resell_Price__c</fullName>
    <label>Total Buy Resell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>