force-app/main/default/objects/Quote/fields/Total_Direct_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Sell_Price__c</fullName>
    <label>Total Direct Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>