force-app/main/default/objects/Quote/fields/Total_Project_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Margin_Percentage__c</fullName>
    <label>Total Project Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>