force-app/main/default/objects/Quote/recordTypes/Equipment_Design_Build_Quote.recordType-meta.xml
<RecordType>
    <fullName>Equipment_Design_Build_Quote</fullName>
    <active>true</active>
    <label>Equipment - Design/Build Quote</label>
</RecordType>