force-app/main/default/objects/Quote/recordTypes/Equipment_Plan_Spec_Quote.recordType-meta.xml
<RecordType>
    <fullName>Equipment_Plan_Spec_Quote</fullName>
    <active>true</active>
    <label>Equipment - Plan/Spec Quote</label>
</RecordType>