force-app/main/default/objects/Quote/recordTypes/General_Contracting_Quote.recordType-meta.xml
<RecordType>
    <fullName>General_Contracting_Quote</fullName>
    <active>true</active>
    <label>General Contracting Quote</label>
</RecordType>