force-app/main/default/objects/Quote/recordTypes/MaRRS_Quote.recordType-meta.xml
<RecordType>
    <fullName>MaRRS_Quote</fullName>
    <active>true</active>
    <label>MaRRS Quote</label>
</RecordType>