force-app/main/default/objects/Quote/recordTypes/Parts_Quote.recordType-meta.xml
<RecordType>
    <fullName>Parts_Quote</fullName>
    <active>true</active>
    <label>Parts Quote</label>
</RecordType>