force-app/main/default/objects/Quote/recordTypes/Spark.recordType-meta.xml
<RecordType>
    <fullName>Spark</fullName>
    <active>true</active>
    <label>Spark</label>
</RecordType>